--- a/style/style.css
+++ b/style/style.css
@@ -4,24 +4,92 @@
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.continer_Main{
-    position: relative;
+.continer-main{
     max-width:600px;
+    width: 94%;
     height: auto;
-    margin:100px 0px 0px 190px;
+    margin:90px auto;
     border-radius:8px;
     box-shadow: 0 0 3px #686868;
 
 }
-.continer_Main h1{
-    position: relative;
+.continer-main h1{
     text-align: center;
-top:20px;
+    margin-top:18px;
+    font-size: 2.1rem;
 }
-form{
-    margin-top: 70px;
+.form{
+    margin-top: 50px;
+}
+.form-grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:10px 16px;
+    align-items: start;
+}
+.form-grid label{
+    display: flex;
+    flex-direction: column;
+    font-weight: 600;
+    font-size:1.1rem;
+    margin-left:30px;
+    gap:6px;
+}
+.input{
+padding: 8px;
+border:1px solid #868686;
+border-radius: 6px;
+font-size: 1rem;
+width:130%;
+margin-left:-120px;
+}
+.input:focus{
+    outline: none;
+border:1px #868686 solid;
+box-shadow: -0px -0px 6px #66b3ff,
+        0px 0px 6px #66b3ff;
+}
+.action{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+.add {
+    margin-top:10px;
+    background-color: #ffffff;
+    color: rgb(57, 175, 175);
+    border: #30c5c5 1px solid;
+    border-radius: 3px;
+    padding:8px 14px;
+    font-weight: 600;
+    font-size: 1rem;
+    cursor: pointer;
+    transition:all 0.2s 0.1s;
 }
 
+.add:hover {
+    background-color: rgb(57, 175, 175);
+    color: #fff;
+}
+.add:focus{
+    outline:none;
+}
+
+.table-wrap{
+    margin-top: 20px;
+    overflow: auto;
+}
+.table{
+    width: 100%;
+    border-collapse: collapse;
+    min-width: 600px;
+    text-align: center;
+}
+.table th,.table td{
+ padding: 10px 12px;
+ border-bottom: 1px solid #eee;
+}
+/*
 .Ename,.Ecategory{
 position: relative;
     bottom:38px;
@@ -97,4 +165,4 @@ box-shadow: -0px -0px 6px #66b3ff,
     
     margin:50px 50px 0px 0px;
     text-align: center;
-}
+}*/
